language/move-compiler/tests/move_check/borrow_v2/open_structs_cause_pain.exp
error[E04020]: missing acquires annotation
   ┌─ tests/move_check/borrow_v2/open_structs_cause_pain.move:30:9
   │
12 │     public fun set(x: u64) acquires R {
   │                                     - The call acquires '0xFF::M::R', but the 'acquires' list for the current function does not contain this type. It must be present in the calling context's acquires list
   ·
30 │         M::set(1);
   │         ^^^^^^^^^ Invalid call to '0xFF::M::set'

error[E04020]: missing acquires annotation
   ┌─ tests/move_check/borrow_v2/open_structs_cause_pain.move:31:17
   │
16 │     public fun get(): u64 acquires R {
   │                                    - The call acquires '0xFF::M::R', but the 'acquires' list for the current function does not contain this type. It must be present in the calling context's acquires list
   ·
31 │         assert!(M::get() == 1, 1)
   │                 ^^^^^^^^ Invalid call to '0xFF::M::get'

